# hangman-game

./: Makefile  README.md  pyproject.toml
src/hangman/: example.py  game.py
tests/: test_example.py  test_game.py
